--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <!-- Channels -->
       <div class="channels">
         <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Natgeologo.svg" alt="National Geograohic">
-        <img src="https://e7.pngegg.com/pngimages/717/540/png-clipart-lonely-planet-india-travel-boutique-hotel-travel-blue-text-thumbnail.png" alt="lonley planet">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcTmTLeYJiuL7M3pSshRLYVltKE9PjEZlBPQ&s" alt="lonley planet">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjqxE2DRyY93_PJMONS_gF3zSiyDob-u4RWQ&s" alt="travel channel">
         <img id="new-york" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVYGJCfNU1hJVTtFksz4mbmlMs0Up5Si1-oPiQglNKKrpX7o1ZZs6ZkGIZY__pzdmO0w&usqp=CAU" alt="new york times">
         <img src="https://logowik.com/content/uploads/images/703_gopro_hero.jpg" alt="go pro">
@@ -141,77 +141,173 @@
           </div>
       </div>
       <div class="container-fluid text-center">
-        <a href="#" style="margin-top: 20px; margin-bottom: 20px; background-color: #FF8800; color: #ffffff;" class="btn">TRAVEL BLOG <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></a>
+        <a href="#" style="margin-top: 20px; margin-bottom: 20px; background-color: #FF8800; color: #ffffff;" class="btn">READ MORE BLOG POSTS <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></a>
+      </div>  
+  </section>
+  
+  <!-- Readers Favorites -->
+
+  <section class="container-fluid my-5 border-bottom border-warning border-5  pb-5">
+      <h2 class="text-center">Readers Favorites</h2>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card text-center">
+                  <img src="./images/travel-sak-yant-tattoos-900x600.jpg.webp" class="card-img-top" alt="Post 1">
+                  <div class="card-body">
+                      <h5 class="card-title">The Magic Sak Yant Tattoo</h5>
+                      <p class="card-text">Over 40 people watched in silence as a monk repeatedly penetrated my flesh.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                  <img src="./images/travel-tips-matt-900x600.jpg.webp" class="card-img-top" alt="Post 2">
+                  <div class="card-body">
+                      <h5 class="card-title">My 50 Best Travel Tips</h5>
+                      <p class="card-text">Here are my best tips to help you save money & become an expert traveler.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                  <img src="./images/travel-ring-road-iceland-900x600.jpg.webp" class="card-img-top" alt="Post 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Secrets Of The Ring Road</h5>
+                      <p class="card-text">Check out my free 7-10 day Iceland itinerary & travel guide.</p>
+                  </div>
+              </div>
+          </div>
+      </div> 
+  </section>
+  
+  <!-- Adventure Travel -->
+  
+  <section class="container-fluid my-5 border-bottom border-warning border-5  pb-5">
+      <h2 class="text-center">Adventure Travel</h2>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card text-center">
+                  <img src="./images/travel-guatemala-volcano-735x492.jpg.webp" class="card-img-top" alt="Post 1">
+                  <div class="card-body">
+                      <h5 class="card-title">Camping On A Volcano</h5>
+                      <p class="card-text">Guatemala's volcano Santiaguito erupts with an explosion every few hours.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                <img src="./images/travel-darien-gap-735x490.jpg.webp" alt="Post 2">
+                <div class="card-body">
+                    <h5 class="card-title">Hiking In The Darien Gap</h5>
+                    <p class="card-text">Exploring a remote & dangerous jungle region on the edge of Panama.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                <img src="./images/travel-greenland-735x490.jpg.webp" alt="Post 3">
+                <div class="card-body">
+                    <h5 class="card-title">Trekking The Arctic Circle</h5>
+                    <p class="card-text">Walking over 100 miles alone for 10 days in remote Greenland.</p>
+                </div>
+              </div>
+          </div>
+      </div>  
+  </section>
+  
+  <!-- Travel Photography -->
+  
+  <section class="container-fluid my-5 border-bottom border-warning border-5  pb-5">
+      <h2 class="text-center">Travel Photography</h2>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card text-center">
+                  <img src="./images/travel-photography-advice-1-900x600.jpg.webp" class="card-img-top" alt="Post 1">
+                  <div class="card-body">
+                      <h5 class="card-title">20 Travel Photography Tips</h5>
+                      <p class="card-text">How to take better photos of your travel adventures around the world.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                <img src="./images/travel-camera-picks-900x600.jpg.webp" alt="Post 2">
+                <div class="card-body">
+                    <h5 class="card-title">Best Travel Cameras</h5>
+                    <p class="card-text">Looking for a camera upgrade? Here are my top travel camera picks.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                <img src="./images/travel-northern-lights-900x600.jpg.webp" alt="Post 3">
+                <div class="card-body">
+                    <h5 class="card-title">Shooting Northern Lights</h5>
+                    <p class="card-text">Learn settings & techniques for capturing the aurora borealis.</p>
+                </div>
+              </div>
+          </div>
+      </div>  
+  </section>
+  
+  <!-- Digital Nomad Lifestyle -->
+  
+  <section class="container-fluid my-5 border-bottom border-warning border-5 pb-5">
+      <h2 class="text-center">Digital Nomad Lifestyle</h2>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card text-center">
+                  <img src="./images/travel-digital-nomad.jpg.webp" class="card-img-top" alt="Post 1">
+                  <div class="card-body">
+                      <h5 class="card-title">Becoming A Digital Nomad</h5>
+                      <p class="card-text">How to work remotely as a digital nomad traveling the world.</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                <img src="./images/travel-job-ideas.jpg.webp" alt="Post 2">
+                <div class="card-body">
+                    <h5 class="card-title">40 Best Travel Jobs</h5>
+                    <p class="card-text">List of travel friendly jobs that allow you to work from abroad.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card text-center">
+                <img src="./images/travel-making-money.jpg.webp" alt="Post 3">
+                <div class="card-body">
+                    <h5 class="card-title">How I Get Paid To Travel</h5>
+                    <p class="card-text">The many different ways I make money while traveling.</p>
+                </div>
+              </div>
+          </div>
       </div>  
   </section>
 
-  <!-- Readers Favorites -->
-  <section class="container-fluid  my-5 border-bottom border-warning border-5">
-    <h2 class="text-center">Readers Favorites</h2>
-    <div class="row">
+  <!-- Travel Videos From Around The World -->
+
+  <section class="container-fluid my-5 pb-5">
+    <h2 class="text-center">Travel Videos From Around The World</h2>
+    <p class="text-center">Follow My Adventures On YouTube!</p>
+    <div class="card mb-3 mt-5 " style="max-width: 60%; margin-left: 20%;">
+      <div class="row g-0">
         <div class="col-md-4">
-            <div class="card">
-                <img src="./images/travel-sak-yant-tattoos-900x600.jpg.webp">
-                    <h5 class="card-title">The Magic Sak Yant Tattoo</h5>
-                    <p class="card-text">Over 40 people watched in silence as a monk repeatedly penetrated my flesh.</p>
-                </div>
-            </div>
+          <div class="card-body pt-5">
+            <h5 class="card-title text-center">Backpacking Afghanistan</h5>
+            <p class="card-text text-center">One of my most memorable travel experiences so far was hiking over 100 miles through the mountains of Afghanistan with locals. Check out the video, and don't forget to subscribe to my YouTube channel for more adventures!</p>
+            <button style="color: #FF8800;" type="button" class="btn btn-outline-warning">READ THE STORY HERE <i class="fa-solid fa-arrow-right" style="color: #FF8800;"></i></button>
+          </div>
         </div>
-        <div class="col-md-4">
-            <div class="card">
-                <img src="./images/travel-tips-matt-900x600.jpg.webp" alt="Post 2">
-                <div class="card-body">
-                    <h5 class="card-title">My 50 Best Travel Tips</h5>
-                    <p class="card-text">Here are my best tips to help you save money & become an expert traveler.</p>
-                </div>
-            </div>
+        <div class="col-md-8 text-end">
+          <img style="height: 100%;" src="./images/travel-video.jpg.webp" class="img-fluid" alt="...">
         </div>
-        <div class="col-md-4">
-            <div class="card">
-                <img src="./images/travel-ring-road-iceland-900x600.jpg.webp" alt="Post 3">
-                <div class="card-body">
-                    <h5 class="card-title">Secrets Of The Ring Road</h5>
-                    <p class="card-text">Check out my free 7-10 day Iceland itinerary & travel guide.</p>
-                </div>
-            </div>
-        </div>
+      </div>
     </div> 
 </section>
 
-<!-- Adventure Travel -->
-<section class="container-fluid  my-5 border-bottom border-warning border-5">
-  <h2 class="text-center">Adventure Travel</h2>
-  <div class="row">
-      <div class="col-md-4">
-          <div class="card">
-              <img src="./images/travel-guatemala-volcano-735x492.jpg.webp">
-                  <h5 class="card-title">Camping On A Volcano</h5>
-                  <p class="card-text">Guatemala’s volcano Santiaguito erupts with an explosion every few hours.</p>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-          <div class="card">
-              <img src="./images/travel-darien-gap-735x490.jpg.webp" alt="Post 2">
-              <div class="card-body">
-                  <h5 class="card-title">Hiking In The Darien Gap</h5>
-                  <p class="card-text">Exploring a remote & dangerous jungle region on the edge of Panama.</p>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-          <div class="card">
-              <img src="./images/travel-greenland-735x490.jpg.webp" alt="Post 3">
-              <div class="card-body">
-                  <h5 class="card-title">Trekking The Arctic Circle</h5>
-                  <p class="card-text">Walking over 100 miles alone for 10 days in remote Greenland.</p>
-              </div>
-          </div>
-      </div>
-  </div> 
-</section>
-
   <!-- Footer -->
+
   <footer class="bg-dark text-white text-center py-4">
       <div class="container">
           <p>&copy; 2024 Expert Vagabond | Travel Blog</p>
