--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
               <h5 style="color: #ffffff;" class="card-title fs-1">EXPLORE YOUR WORLD</h5>
               <p style="color: #ffffff;" class="card-text fs-5">Hi! I’m Matt — adventure travel photographer, professional blogger, and digital nomad. Join me as I share useful travel tips & experiences with you from around the world!</p>
               <div class="d-flex justify-content-center">
-                <a href="#" style="background-color: #FF8800; color: #ffffff;" class="btn">TRAVEL BLOG <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></a>
-              <a href="#" style="background-color: #FF8800; color: #ffffff;" class="btn ms-5">ABOUT MATT <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></a>
+                <a href="#" style="background-color: #FF8800; color: #ffffff; width: 100%;" class="btn">TRAVEL BLOG <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></a>
+              <a href="#" style="background-color: #FF8800; color: #ffffff; width: 100%;" class="btn ms-5">ABOUT MATT <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i></a>
               </div>
             </div>
           </div>
@@ -112,11 +112,11 @@
         <img src="https://logowik.com/content/uploads/images/703_gopro_hero.jpg" alt="go pro">
       </div>
       <!-- Latest Blog Posts -->
-    <section class="container-fluid my-5 border-bottom border-warning border-5">
-      <h2 class="text-center">Latest Blog Posts</h2>
+    <section class="container-fluid my-5 border-bottom border-warning border-5 text-center">
+      <h2 class="mb-5">Latest Blog Posts</h2>
       <div class="row">
           <div class="col-md-4">
-              <div class="card">
+              <div style="height: 300px;" class="card">
                   <img src="https://res.cloudinary.com/sagacity/image/upload/c_crop,h_1173,w_2000,x_0,y_0/c_limit,dpr_auto,f_auto,fl_lossy,q_80,w_1080/shutterstock_1301695258_muaarc.jpg" class="card-img-top" alt="Post 1">
                   <div class="card-body">
                       <h5 class="card-title">Everything You Need To Know About Renting A Car In Mexico</h5>
@@ -124,7 +124,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card">
+              <div style="height: 300px;" class="card">
                   <img src="https://st4.depositphotos.com/12052680/38696/i/450/depositphotos_386969034-stock-photo-koutoubia-mosque-minaret-medina-quarter.jpg" class="card-img-top" alt="Post 2">
                   <div class="card-body">
                       <h5 class="card-title">Best Things To Do In Marrakesh, Morocco</h5>
@@ -132,7 +132,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card">
+              <div style="height: 300px;" class="card">
                   <img src="https://static.wixstatic.com/media/nsplsh_2956559ec72d49c49ca8acca97c3014f~mv2.jpg/v1/fill/w_1000,h_667,al_c,q_85,usm_0.66_1.00_0.01/nsplsh_2956559ec72d49c49ca8acca97c3014f~mv2.jpg" class="card-img-top" alt="Post 3">
                   <div class="card-body">
                       <h5 class="card-title">Tips For Visiting The Colosseum In Rome</h5>
@@ -148,10 +148,10 @@
   <!-- Readers Favorites -->
 
   <section class="container-fluid my-5 border-bottom border-warning border-5  pb-5">
-      <h2 class="text-center">Readers Favorites</h2>
+      <h2 class="text-center mb-5">Readers Favorites</h2>
       <div class="row">
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                   <img src="./images/travel-sak-yant-tattoos-900x600.jpg.webp" class="card-img-top" alt="Post 1">
                   <div class="card-body">
                       <h5 class="card-title">The Magic Sak Yant Tattoo</h5>
@@ -160,7 +160,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                   <img src="./images/travel-tips-matt-900x600.jpg.webp" class="card-img-top" alt="Post 2">
                   <div class="card-body">
                       <h5 class="card-title">My 50 Best Travel Tips</h5>
@@ -169,7 +169,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                   <img src="./images/travel-ring-road-iceland-900x600.jpg.webp" class="card-img-top" alt="Post 3">
                   <div class="card-body">
                       <h5 class="card-title">Secrets Of The Ring Road</h5>
@@ -183,10 +183,10 @@
   <!-- Adventure Travel -->
   
   <section class="container-fluid my-5 border-bottom border-warning border-5  pb-5">
-      <h2 class="text-center">Adventure Travel</h2>
+      <h2 class="text-center mb-5">Adventure Travel</h2>
       <div class="row">
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                   <img src="./images/travel-guatemala-volcano-735x492.jpg.webp" class="card-img-top" alt="Post 1">
                   <div class="card-body">
                       <h5 class="card-title">Camping On A Volcano</h5>
@@ -195,7 +195,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                 <img src="./images/travel-darien-gap-735x490.jpg.webp" alt="Post 2">
                 <div class="card-body">
                     <h5 class="card-title">Hiking In The Darien Gap</h5>
@@ -204,7 +204,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                 <img src="./images/travel-greenland-735x490.jpg.webp" alt="Post 3">
                 <div class="card-body">
                     <h5 class="card-title">Trekking The Arctic Circle</h5>
@@ -218,10 +218,10 @@
   <!-- Travel Photography -->
   
   <section class="container-fluid my-5 border-bottom border-warning border-5  pb-5">
-      <h2 class="text-center">Travel Photography</h2>
+      <h2 class="text-center mb-5">Travel Photography</h2>
       <div class="row">
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                   <img src="./images/travel-photography-advice-1-900x600.jpg.webp" class="card-img-top" alt="Post 1">
                   <div class="card-body">
                       <h5 class="card-title">20 Travel Photography Tips</h5>
@@ -230,7 +230,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                 <img src="./images/travel-camera-picks-900x600.jpg.webp" alt="Post 2">
                 <div class="card-body">
                     <h5 class="card-title">Best Travel Cameras</h5>
@@ -239,7 +239,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                 <img src="./images/travel-northern-lights-900x600.jpg.webp" alt="Post 3">
                 <div class="card-body">
                     <h5 class="card-title">Shooting Northern Lights</h5>
@@ -253,10 +253,10 @@
   <!-- Digital Nomad Lifestyle -->
   
   <section class="container-fluid my-5 border-bottom border-warning border-5 pb-5">
-      <h2 class="text-center">Digital Nomad Lifestyle</h2>
+      <h2 class="text-center mb-5">Digital Nomad Lifestyle</h2>
       <div class="row">
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                   <img src="./images/travel-digital-nomad.jpg.webp" class="card-img-top" alt="Post 1">
                   <div class="card-body">
                       <h5 class="card-title">Becoming A Digital Nomad</h5>
@@ -265,7 +265,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                 <img src="./images/travel-job-ideas.jpg.webp" alt="Post 2">
                 <div class="card-body">
                     <h5 class="card-title">40 Best Travel Jobs</h5>
@@ -274,7 +274,7 @@
               </div>
           </div>
           <div class="col-md-4">
-              <div class="card text-center">
+              <div style="height: 350px;" class="card text-center">
                 <img src="./images/travel-making-money.jpg.webp" alt="Post 3">
                 <div class="card-body">
                     <h5 class="card-title">How I Get Paid To Travel</h5>
@@ -308,14 +308,38 @@
 
   <!-- Footer -->
 
-  <footer class="bg-dark text-white text-center py-4">
+  <footer style="background-color: black;" class="text-white text-center py-4">
       <div class="container">
-          <p>&copy; 2024 Expert Vagabond | Travel Blog</p>
-          <div class="social-links">
-              <a href="#" class="text-white mr-3">Facebook</a>
-              <a href="#" class="text-white mr-3">Twitter</a>
-              <a href="#" class="text-white">Instagram</a>
+        <div style="display: flex; justify-content: space-evenly;">
+          <div class="travel_resources">
+            <h2>Travel Resources</h2>
+            <ul type="none">
+              <li>How To Travel The World</li>
+              <li>Picking A Travel Backpack</li>
+              <li>How To Save Money For Travel</li>
+              <li>Top Travel Safety Tips</li>
+            </ul>
           </div>
+          <div class="social">
+            <h2>Social Media</h2>
+            <div class="social-icons">
+              <a href=""><i class="fa-brands fa-instagram" style="color: #e62d90;"></i></a>
+              <a href=""><i class="fa-brands fa-youtube" style="color: #ed0707;"></i></a>
+              <a href=""><i class="fa-brands fa-facebook" style="color: #165cd4;"></i></a>
+              <a href=""><i class="fa-brands fa-twitter" style="color: #5bb6fb;"></i></a>
+            </div>
+          </div>
+          <div class="travel_photography">
+            <h2>Travel Photography</h2>
+            <ul type="none">
+              <li>How To Improve Your Photos</li>
+              <li>Recommended Travel Cameras</li>
+              <li>Best Online Photography Classes</li>
+              <li>Travel Photography Prints</li>
+            </ul>
+          </div>
+        </div>
+          <p class="mt-5">&copy; 2024 Expert Vagabond | Travel Blog | About | Policy Page | Contact</p>
       </div>
   </footer>
 
